# payment-router

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_SOURCES.md
src/payment_router/: __main__.py  cli.py  decision.py  provenance.py  py.typed  router.py  sensitivity.py  service.py  visualizer.py
src/payment_router/core/: fx.py  graph.py  models.py
src/payment_router/networks/: base.py  cips.py  sepa.py  swift.py  wise.py
src/payment_router/web/: __init__.py  ai.py  app.py  schemas.py
src/payment_router/web/static/: app.js  index.html  styles.css
tests/: helpers.py  test_cli.py  test_decision.py  test_router.py  test_sensitivity.py  test_service.py  test_visualizer.py
tests/core/: __init__.py  test_fx.py  test_fx_live.py  test_graph.py  test_models.py
tests/networks/: test_base.py  test_cips.py  test_sepa.py  test_swift.py  test_wise.py
tests/web/: test_ai.py  test_api.py
