[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "payment-router"
version = "0.1.0"
description = "Teaching-oriented CLI simulator for cross-border payment routing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.3,<4.0",
    "typer>=0.12,<1.0",
    "pydantic>=2,<3",
    "httpx>=0.27,<1.0",
]

[project.scripts]
payment-router = "payment_router.cli:app"
remit = "payment_router.cli:app"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-httpx>=0.30,<1.0",
    "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/payment_router"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
